--- a/package.json
+++ b/package.json
@@ -1,41 +1,33 @@
 {
-  "name": "metalsmith-visualdebug",
-  "version": "0.0.0",
-  "description": "A visual debugging tool for Metalsmith.",
-  "author": {
-    "name": "Leland Miller",
-    "email": "lelandmiller@gmail.com",
-    "url": "www.lelandmiller.com"
+  "name": "json-viewer",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
   },
-  "repository": "lelandmiller/metalsmith-visualdebug",
-  "license": "MIT",
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "metalsmith-visualdebug",
-    "Metalsmith",
-    "debugging",
-    "visualization"
-  ],
   "dependencies": {
     "cycle": "^1.0.3",
-    "express": "^4.10.6",
-    "lodash": "^2.4.1",
-    "socket.io": "^1.2.1"
-  },
-  "devDependencies": {
+    "express": "^4.12.3",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-cli": "^1.11.0",
-    "jshint-stylish": "^1.0.0",
+    "jshint-stylish": "^1.0.1",
     "load-grunt-tasks": "^1.0.0",
-    "metalsmith": "^1.0.1",
-    "time-grunt": "^1.0.0"
+    "lodash": "^2.4.1",
+    "readline-sync": "^0.8.0",
+    "time-grunt": "^1.1.0"
   },
+  "devDependencies": {},
   "scripts": {
-    "test": "grunt"
-  }
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lelandmiller/json-viewer"
+  },
+  "author": "Leland Miller",
+  "license": "GPLv3",
+  "bugs": {
+    "url": "https://github.com/lelandmiller/json-viewer/issues"
+  },
+  "homepage": "https://github.com/lelandmiller/json-viewer"
 }
